# manipulator_pose_following

./: .gitignore  CMakeLists.txt  backup_data.txt  data.txt  data_init.txt  data_lan1.txt
msg/: PlannedPath.msg
src/: check_kinematic_node.cpp  control_with_leap.cpp  kb_jogging_node.cpp  point_traj_following.cpp  pose_following_node.cpp  read_file.cpp  send_trajectory_2actionlib copy.cpp  send_trajectory_2actionlib.cpp  test_keyboard.cpp  test_send_command.cpp  test_service.cpp  test_traject_node.cpp  user_pose_testing.cpp
src/000_noLongerUsed/: send_trajectory_2actionlib.cpp  test_send_jointcmd.cpp
src/mirror/: user_pose_testing.cpp  user_pose_testing_ver_JA.cpp  user_pose_testing_ver_Quat.cpp
srv/: InitPoint.srv
